testpage.css, changed resultspage to table layout
Moved css for testpage to separate file testpage.css
Changed resultspage to use the same table layout as testpage so that the
bottom #containr div has variable height and will extend to the bottom

--- a/resultspage.css
+++ b/resultspage.css
@@ -5,7 +5,6 @@
 #containr {
     border: 3px solid white;
     overflow:scroll;
-    height:700px;
 }
 #percentsTable {
     font-size:40px;
@@ -23,10 +22,11 @@
 .textSpace {
     text-align:right;
 }
+/*TODO: make it only show up when you swipe right*/
 .onoffDiv {
     padding-left:50px;
     float: right;
-    width: 100px;
+    width: 200px;
 }
 /*TODO: make it background red, and only shows up when you swipe right*/
  .clearDiv {
