new fonts, moved css in index.html to index.css
Added some font files
Moved all of css from index.html to index.css
in resultspage.js, renamed var 'results' to 'characterTable'
renamed font-family 'Kozuko' to 'Kana'
font-family 'Kana' now uses AozoraMincho-bold instead of KFHimaji

--- a/resultspage.css
+++ b/resultspage.css
@@ -6,6 +6,9 @@
     border: 3px solid white;
     overflow:scroll;
 }
+#characterTable {
+    font-family: Kana;
+}
 #percentsTable {
     font-size:40px;
 }
@@ -14,6 +17,7 @@
     width:100%;
 }
 .leftDiv {
+    font-family: Kana;
     float: left;
 }
 .percentDiv {
